openshift/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 'image-registry.openshift-image-registry.svc:5000/flask-app/flask-app:latest'
        ports:
        - containerPort: 5000
